--- a/Sidebars/Informacion-del-Sistema/SiderBar_InformacionJavaScript.html
+++ b/Sidebars/Informacion-del-Sistema/SiderBar_InformacionJavaScript.html
@@ -1,7 +1,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script>
   /**
-   * Run initializations on dialog load.
+   * Run initializations on dialog load. jeje
    */
   $(function() {
       $(window).load(function() {
